# xpub-scan-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs
