[package]
name = "xpub-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitcoin = "0.32.4"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
